styles.css
/* Set general style */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: "Red Hat Display", sans-serif;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

section{
    width: 80%;
    height: 60%;
    background:  #5ba5db87;
    border-radius: 25px;
}

/* Set styles for Screen display */
.screen{
    height: 150px;
    background: #001E34;
    margin: 20px;
}

.screen_Container{
    text-align: end;
    padding: 17px;
    font-size: 30px;
    user-select: none;
}

.calculation{
    font-size: 12px;
    color: white;
    overflow: auto;
    padding-top: 2rem;
}

.result{
    font-size: 2.5rem;
    padding-top: 1rem;
    color: #FFF;
}

/* set styles for keyboard */

.btn{
    width: 100%;
    height: 100%;
    font-size: 17px;
    cursor: pointer;
    border: 0.2px solid black;
    background: #002B4A;
    color: white;
    outline: none;
}

.operator{
    color: #26B821;
    font-family: "Fira Sans", sans-serif;
}

.math{
    color: #9A80E4;
    font-family: "Fira Sans", sans-serif;
}

.btn:hover{
    background: #FFA800;
    color: #FFF;
    transition: all 0.5s linear;
}

/* set grid for keyboard */

.keyboard_Container{
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 50px 50px 50px 50px 50px;
}

.key_zero{
    grid-column: 1 / span 2;
}

.key_equal{
    grid-area: 4 / 4 / span 2 / 4;
}

